# fapi

./: .dockerignore  Dockerfile  docker-compose-test.yml  docker-compose.yml  main.py  pyproject.toml  setup.cfg  test_e2e.py
.github/workflows/: integration.yml  test.yml  unit_tests.yml
fapi/: hello.py  main.py  test_hello.py
src/: .dockerignore  Dockerfile  requirements.txt  setup.cfg
src/api/: auth.py  main.py
src/api/routers/: root.py
src/tests/: test_auth.py  test_main.py  test_routes.py
tests/: Dockerfile  test_integration.py
